# PneumoDetects

./: .gitignore  README.md  experiments.ipynb  pyproject.toml
