[tool.poetry]
name = "pneumodetects"
version = "0.1.0"
description = "Pneumonia Detection App"
authors = ["Aishwarya Setia <setiaaishwarya@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.9.2"
numpy = "^2.1.3"


[tool.poetry.group.dev.dependencies]
kaggle = "^1.6.17"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
