[tool.poetry]
name = "pneumodetects"
version = "0.1.0"
description = "Pneumonia Detection App"
authors = ["Aishwarya Setia <setiaaishwarya@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
tensorflow-io-gcs-filesystem = "0.31.0"
tensorflow = "2.15.0"
tensorflow-intel = {version="^2.15.0", platform = "win32"}
matplotlib = "^3.9.2"

[tool.poetry.group.dev.dependencies]
kaggle = "^1.6.17"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
